--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -261,7 +261,15 @@
         <Setter Property="HorizontalAlignment" Value="Right"/>
         <Setter Property="VerticalAlignment" Value="Bottom"/>
     </Style>
-   <Style x:Key="TenKeyString" TargetType="TextBlock">
+    <Style x:Key="TextDateLeft" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="32"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Foreground" Value="#888888"/>
+        <Setter Property="Margin" Value="0,0,0,2"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+    </Style>
+    <Style x:Key="TenKeyString" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#FFFFFF"/>
         <Setter Property="Margin" Value="20,20,20,20"/>
     </Style>
