--- a/Display/Transport.xaml
+++ b/Display/Transport.xaml
@@ -26,14 +26,16 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="80"/>
-                <RowDefinition Height="485"/>
+                <RowDefinition Height="490"/>
                 <RowDefinition Height="60*"/>
             </Grid.RowDefinitions>
             <!-- 上領域 -->
-            <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,10,0,0" >
-                <TextBlock Text="{Binding TransportDate,Converter={StaticResource DateTimeConverter},FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"/>
-                <Grid HorizontalAlignment="Right" Width="910">
-                    <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" IsDropDownOpen="{Binding IsWorker}" HorizontalAlignment="Right" Width="280">
+            <StackPanel Orientation="Horizontal">
+                <Grid HorizontalAlignment="Left">
+                    <TextBlock Text="{Binding TransportDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"/>
+                </Grid>
+                <Grid HorizontalAlignment="Right">
+                    <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" HorizontalAlignment="Right" Width="280" Margin="652,0,0,0">
                         <i:Interaction.Behaviors>
                             <local:ComboBoxBehavior/>
                         </i:Interaction.Behaviors>
@@ -47,7 +49,7 @@
             </StackPanel>
             <!-- 表領域 -->
             <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
-                      ColumnHeaderStyle="{StaticResource DefultHeader}">
+                      ColumnHeaderStyle="{StaticResource DefultHeader}" Margin="0,0,0,10">
                 <!-- 項目設定 -->
                 <DataGrid.Columns>
                     <DataGridTemplateColumn Header="ロット番号" Width="200">
