--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -268,6 +268,7 @@
         <Setter Property="Margin" Value="0,0,0,2"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="Margin" Value="0,0,0,5"/>
     </Style>
     <Style x:Key="TenKeyString" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#FFFFFF"/>
