--- a/Display/Transport.xaml
+++ b/Display/Transport.xaml
@@ -30,43 +30,50 @@
                 <RowDefinition Height="60*"/>
             </Grid.RowDefinitions>
             <!-- 上領域 -->
-            <StackPanel Orientation="Horizontal">
-                <Grid HorizontalAlignment="Left">
-                    <TextBlock Text="{Binding TransportDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0" HorizontalAlignment="Left">
+                        <TextBlock Text="{Binding TransportDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"/>
+                    </Grid>
+                <Grid Grid.Column="1" HorizontalAlignment="Right">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="担当者選択" Style="{StaticResource TextDateLeft}" Margin="0,0,10,5"/>
+                        <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" HorizontalAlignment="Right" Width="280">
+                            <i:Interaction.Behaviors>
+                                <local:ComboBoxBehavior/>
+                            </i:Interaction.Behaviors>
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="TouchDown">
+                                    <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Worker"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </ComboBox>
+                    </StackPanel>
                 </Grid>
-                <Grid HorizontalAlignment="Right">
-                    <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" HorizontalAlignment="Right" Width="280" Margin="652,0,0,0">
-                        <i:Interaction.Behaviors>
-                            <local:ComboBoxBehavior/>
-                        </i:Interaction.Behaviors>
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="TouchDown">
-                                <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Worker"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </ComboBox>
-                </Grid>
-            </StackPanel>
+            </Grid>
             <!-- 表領域 -->
-            <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
+            <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Table}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
                       ColumnHeaderStyle="{StaticResource DefultHeader}" Margin="0,0,0,10">
                 <!-- 項目設定 -->
                 <DataGrid.Columns>
                     <DataGridTemplateColumn Header="ロット番号" Width="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding ロット番号}" HorizontalAlignment="Center"/>
+                                <TextBlock Text="{Binding LotNumber}" HorizontalAlignment="Center"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                     <DataGridTemplateColumn Header="" Width="60">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding ロット番号}" HorizontalAlignment="Center"/>
+                                <TextBlock Text="{Binding LotNumberSEQ}" HorizontalAlignment="Center"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="品番" Width="300*">
+                    <!--<DataGridTemplateColumn Header="品番" Width="300*">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding 品番}" HorizontalAlignment="Left" />
@@ -100,7 +107,7 @@
                                 <TextBlock Text="{Binding 完了,Converter={StaticResource CompletedConverter}}" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Foreground="{Binding 仕掛区分,Converter={StaticResource ProcessColorConverter}}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
+                    </DataGridTemplateColumn>-->
                 </DataGrid.Columns>
                 <i:Interaction.Behaviors>
                     <local:DataGridBehavior/>
