--- a/Display/Transport.xaml
+++ b/Display/Transport.xaml
@@ -40,8 +40,8 @@
                     </Grid>
                 <Grid Grid.Column="1" HorizontalAlignment="Right">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="担当者選択" Style="{StaticResource TextDateLeft}" Margin="0,0,10,5"/>
-                        <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" HorizontalAlignment="Right" Width="280">
+                        <TextBlock Text="担当者選択" Style="{StaticResource TextDateLeft}" Margin="0,0,20,5"/>
+                        <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" HorizontalAlignment="Right" Width="280" Margin="0,0,0,-5" Padding="10,5,10,5" Foreground="#555555">
                             <i:Interaction.Behaviors>
                                 <local:ComboBoxBehavior/>
                             </i:Interaction.Behaviors>
@@ -55,25 +55,25 @@
                 </Grid>
             </Grid>
             <!-- 表領域 -->
-            <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Table}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
+            <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
                       ColumnHeaderStyle="{StaticResource DefultHeader}" Margin="0,0,0,10">
                 <!-- 項目設定 -->
                 <DataGrid.Columns>
                     <DataGridTemplateColumn Header="ロット番号" Width="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding LotNumber}" HorizontalAlignment="Center"/>
+                                <TextBlock Text="{Binding ロット番号}" HorizontalAlignment="Center"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                     <DataGridTemplateColumn Header="" Width="60">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding LotNumberSEQ}" HorizontalAlignment="Center"/>
+                                <TextBlock Text="{Binding SEQ}" HorizontalAlignment="Center"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <!--<DataGridTemplateColumn Header="品番" Width="300*">
+                    <DataGridTemplateColumn Header="品番" Width="300*">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding 品番}" HorizontalAlignment="Left" />
@@ -87,27 +87,40 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="重量" Width="180" >
+                    <DataGridTemplateColumn Header="数量" Width="110" >
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding 数量,Converter={StaticResource CurrencyConverter}}" HorizontalAlignment="Right"/>
+                                <TextBlock Text="{Binding 数量, Converter={StaticResource CurrencyConverter}}" HorizontalAlignment="Right"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="担当者" Width="180">
+                    <DataGridTemplateColumn Header="重量" Width="110">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding 引取者}" HorizontalAlignment="Left"/>
+                                <TextBlock Text="{Binding コイル重量, Converter={StaticResource CurrencyConverter}}" HorizontalAlignment="Right"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="ロット数" Width="150">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding 計画数, Converter={StaticResource CurrencyConverter}}" HorizontalAlignment="Right"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                     <DataGridTemplateColumn Header="" Width="110">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding 完了,Converter={StaticResource CompletedConverter}}" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Foreground="{Binding 仕掛区分,Converter={StaticResource ProcessColorConverter}}"/>
+                                <StackPanel Orientation="Vertical">
+                                    <Border CornerRadius="2" Background="{Binding 工程, Converter={StaticResource ProcessColorConverter}, FallbackValue=#00FFFFFF}" 
+                                            MinWidth="70" Height="32" VerticalAlignment="Center">
+                                        <TextBlock Text="{Binding 工程}" Foreground="{Binding 工程, Converter={StaticResource CompletedColorConverter}}" 
+                                                   FontWeight="Bold" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                    </Border>
+                                </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>-->
+                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
                 <i:Interaction.Behaviors>
                     <local:DataGridBehavior/>
@@ -120,7 +133,7 @@
                         <Viewbox Style="{StaticResource Button}">
                             <WrapPanel>
                                 <materialDesign:PackIcon Kind="PenAdd" Margin="0,3,20,0" Height="30" Width="30"/>
-                                <TextBlock Text="登　録"/>
+                                <TextBlock Text="引取処理"/>
                             </WrapPanel>
                         </Viewbox>
                         <i:Interaction.Triggers>
